fixing structures